# hospital-price-transparency-intelligence

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: requirements.txt  streamlit_app.py
app/data/: combined.csv  export_metadata.json  qa_summary.json
config/: hospitals.yaml
data/: cms_knee_replacement_by_provider.csv
docs/: design.md  hospital_data_discovery_and_pipeline_reference.md  pipeline-findings.md  regulatory-and-assessment-reference.md
src/hpt/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  constants.py  csv_encoding.py  discovery.py  download.py  drift.py  export.py  extract.py  http_utils.py  join.py  models.py  normalize.py  pipeline.py  procedure_filter.py  template_versions.py
src/hpt/parsers/: __init__.py  csv_parser.py  json_parser.py
tests/: test_checkpoint.py  test_cli.py  test_csv_encoding_and_artifacts.py  test_discovery.py  test_download.py  test_drift.py  test_export.py  test_extract_parsers.py  test_http_utils.py  test_join.py  test_pipeline.py  test_procedure_filter.py  test_template_versions.py
tests/fixtures/: sample_cms_hpt.txt  sample_json_drg469.json  sample_wide_tka.csv
