[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hospital-price-transparency-intelligence"
version = "0.1.0"
description = "Pipeline for hospital price transparency MRFs and CMS knee replacement data (assessment project)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "httpx==0.28.1",
    "ijson==3.4.0",
    "plotly==5.24.1",
    "polars==1.21.0",
    "streamlit==1.41.1",
]

[project.optional-dependencies]
dev = [
    "mypy==1.14.1",
    "pre-commit==4.0.1",
    "pytest==8.3.4",
    "ruff==0.8.6",
]

[project.scripts]
hpt = "hpt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.mypy]
python_version = "3.11"
packages = ["hpt"]
strict = false
warn_return_any = true
warn_unused_ignores = true
